[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/colorselector.png" type="Texture" id=1]
[ext_resource path="res://art/Poco.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://colorpicker.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 2
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 2
outline_color = Color( 0.0588235, 0, 1, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 2
outline_color = Color( 0, 1, 0.0627451, 1 )
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 640, 362 )
texture = ExtResource( 1 )

[node name="Red" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 162.0
margin_top = 421.0
margin_right = 249.0
margin_bottom = 487.0
rect_pivot_offset = Vector2( -1047, -588 )
custom_colors/font_color_disabled = Color( 1, 0, 0, 1 )
custom_colors/font_color_focus = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Red"

[node name="Blue" type="Button" parent="."]
margin_left = 583.0
margin_top = 421.0
margin_right = 685.0
margin_bottom = 487.0
rect_pivot_offset = Vector2( -1047, -588 )
custom_fonts/font = SubResource( 2 )
text = "Blue"

[node name="Green" type="Button" parent="."]
margin_left = 1002.0
margin_top = 421.0
margin_right = 1134.0
margin_bottom = 487.0
rect_pivot_offset = Vector2( -1047, -588 )
custom_fonts/font = SubResource( 3 )
text = "Green"

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
margin_left = 529.0
margin_top = 187.0
margin_right = 738.0
margin_bottom = 359.0

[connection signal="pressed" from="Red" to="." method="_on_Red_pressed"]
[connection signal="pressed" from="Blue" to="." method="_on_Blue_pressed"]
[connection signal="pressed" from="Green" to="." method="_on_Green_pressed"]
